--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -194,20 +194,27 @@ nav #padCheck a:hover{
 
 .commo{
 	margin-top: 20px;
-	margin-left: -200px;
 	width: 150px;
-	height: 240px;
+	height: 270px;
+	display: inline-block;
+	margin:20px;
+	
 }
+#commodity{
+	margin-left: -220px;
+	margin-right: 20px;
+}
+
 .commo h2{
 	font-size: 12px;
 	margin-left: 12px;
-	margin-top: 5px;
+	margin-top: 3px;
 	font-weight: 500;
 }
 .commo p{
 	font-size: 16px;
 	margin-left: 12px;
-	margin-top: 12px;
+	margin-top: 20px;
 	font-weight: 600;
 }
 #foot{
@@ -398,6 +405,9 @@ nav #padCheck a:hover{
 	cursor: pointer;
 }
 
+/* #commodity{
+	display:inline
+} */
 
 
 
